--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,7 @@
 .place__image {
   border: 1px solid red;
+  max-width: 460px;
+  box-sizing: border-box;
+  margin: 0 0 0 0;
+  grid-row: span 3;
 }
