--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,3 +1,12 @@
 .place__paragraph {
   border: 1px solid red;
+  margin: 0 0 0 0;
+  max-width: 484px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 29px;
+}
+
+.place__paragraph:first-of-type {
+  margin-bottom: 26px;
 }
