--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,3 +1,8 @@
 .place__title {
   border: 1px solid red;
+  margin: 0 0 48px 0 ;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  max-width: 460px;
 }
