--- a/blocks/place/__website/_url-heading/place__website_url-heading.css
+++ b/blocks/place/__website/_url-heading/place__website_url-heading.css
@@ -1,3 +1,8 @@
 .place__website_url-heading {
   border: 1px solid red;
+  margin: 0;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 12px;
+  max-width: 456px;
 }
