--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,3 +1,7 @@
 .place__website {
   border: 1px solid red;
+  max-width: 456px;
+  max-height: 46px;
+  align-self: end;
+  margin-bottom: 56px;
 }
