--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,3 +1,12 @@
 .place {
   border: 1px solid red;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-auto-flow: column;
+  grid-template-rows: auto auto auto auto;
+  column-gap: 40px;
+  margin-bottom: 80px;
+
+
+
 }
