--- a/pages/index.css
+++ b/pages/index.css
@@ -19,3 +19,5 @@
 @import url(../blocks/place/__website/place__website.css);
 @import url(../blocks/place/__website/_link/place__website_link.css);
 @import url(../blocks/place/__website/_url-heading/place__website_url-heading.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/places/places.css);
