--- a/pages/index.css
+++ b/pages/index.css
@@ -21,3 +21,9 @@
 @import url(../blocks/place/__website/_url-heading/place__website_url-heading.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/places/places.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__backgroung/cover__backgroung.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__title/cover__title.css);
+
