--- a/pages/index.css
+++ b/pages/index.css
@@ -26,4 +26,9 @@
 @import url(../blocks/cover/__overlay/cover__overlay.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__title/cover__title.css);
-
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/intro1/intro1.css);
+@import url(../blocks/links/links.css);
+@import url(../blocks/links/__lang-link/links__lang-link.css);
