--- a/blocks/content/contents.css
+++ b/blocks/content/contents.css
@@ -1,18 +1,10 @@
-@font-face {
-  font-family: "Inter";
-  src: local("Inter"),
-    url("Inter.woff2") format("woff2"),
-    url("Inter.woff") format("woff"),
-    url("Inter.svg") format("svg");
-  font-weight: normal;
-}
-
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Inter";
 }
 
 .content {
   display: flex;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
   flex-direction: column;
+  margin: 0 48px 0 48px;
 }
