--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -4,13 +4,11 @@
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translatex(-50%);
-  max-width: 560px;
-  margin-bottom: 32px;
+   max-width: 560px;
   text-align: center;
+  grid-row: 2/3;
+  grid-column: 2/6;
+  z-index: 1;
 
 
 }
