--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,9 @@
-.header {
+.footer {
   border: 1px solid red;
-  max-width: 1184px;
   display: flex;
-  margin: 28px 48px 0 48px;
   justify-content: space-between;
+  max-width: 1184px;
+  margin-top: 92px;
+  margin-bottom: 24px;
+
 }
