--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,11 +1,10 @@
 .intro__text {
   border: 1px solid red;
   max-width: 690px;
-  max-height: 208px;
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
-  margin: 40px auto 33px auto;
+  margin: 40px 0 33px 0;
 }
 
 
