--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -2,4 +2,8 @@
   border: 1px solid red;
   max-width: 984px;
   margin: 64px auto 8px auto;
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  box-sizing: border-box;
 }
