--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,5 +1,7 @@
 .photo-grid__item {
   border: 1px solid red;
-  width: 284px;
-  height: 213px;
+  max-width: 284px;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
 }
