--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,10 @@
 .place__image {
   border: 1px solid red;
   max-width: 460px;
+  width: 100%;
   box-sizing: border-box;
   margin: 0 0 0 0;
   grid-row: span 3;
+  object-fit: cover;
+  object-position: center;
 }
