--- a/blocks/content/contents.css
+++ b/blocks/content/contents.css
@@ -1,5 +1,11 @@
 body {
   font-family: "Inter";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
 
 .content {
@@ -8,3 +14,15 @@ body {
   flex-direction: column;
   margin: 0 48px 0 48px;
 }
+
+@media screen and (max-width:767px) {
+  .content {
+    margin: 0 16px 0 16px;
+  }
+}
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .content {
+    margin: 0 24px 0 24px;
+  }
+}
+
