--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,9 +6,23 @@ line-height: 18px;
  margin: 0 18px 0 0;
  color: #fff;
  text-decoration: none;
- 
+
 }
 
 .footer__link:last-of-type {
   margin-right: 0;
 }
+
+@media screen and (max-width:320px) {
+  .footer__link {
+font-size: 24px;
+line-height: 24px;
+  }
+}
+@media screen and (max-width:728px) {
+  .footer__link {
+margin-bottom: 32px;
+margin-right: 0;
+  }
+}
+
