--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,14 @@
   margin: 28px 48px 0 48px;
   justify-content: space-between;
 }
+
+@media screen and (max-width:767px) {
+  .header {
+    margin: 28px 16px 0 16px;
+  }
+}
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .header {
+    margin: 28px 24px 0 24px;
+  }
+}
