--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,8 +3,8 @@
   margin: 0;
   font-weight: 400;
   font-size: 10px;
-  line-height: 1.4;
-  width: 158px;
-  
+  line-height: 14px;
+  align-self: flex-start;
+
 
 }
