--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -7,3 +7,31 @@
   width: 100%;
   box-sizing: border-box;
 }
+
+@media screen and (max-width:768px) {
+  .lead__image {
+    margin-left: -24px;
+    margin-right: -24px;
+        width: calc(100% + 48px);
+
+  }
+}
+
+@media screen and (max-width:767px) {
+  .lead__image {
+    margin-left: -16px;
+    margin-right: -16px;
+    width: calc(100% + 32px);
+    margin-top: 40px;
+
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width:1279px) {
+  .lead__image {
+
+    margin-top: 56px;
+
+
+  }
+}
