--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -4,4 +4,26 @@
   width: 100%;
   object-fit: cover;
   object-position: center;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width:1024px) {
+  .photo-grid__item {
+    max-width: 300px;
+
+  }
+}
+
+@media screen and (max-width:768px) {
+  .photo-grid__item {
+    max-width: 352px;
+
+  }
+}
+
+@media screen and (max-width:320px) {
+  .photo-grid__item {
+    max-width: 288px;
+
+  }
 }
