--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,5 +3,33 @@
   display: grid;
   gap: 16px;
   grid-template-columns: repeat(4, 1fr);
-  margin: 92px auto 92px auto;
+  margin: 92px 0 92px 0;
+}
+
+@media screen and (max-width:1024px) {
+  .photo-grid {
+    gap: 16px;
+    grid-template-columns: repeat(3, 1fr);
+
+  }
+}
+
+@media screen and (max-width:768px) {
+  .photo-grid {
+    gap: 14px;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 88px;
+    margin-bottom: 88px;
+
+  }
+}
+
+@media screen and (max-width:320px) {
+  .photo-grid {
+    gap: 12px;
+    grid-template-columns: repeat(1, 1fr);
+    margin-top: 64px;
+    margin-bottom: 64px;
+
+  }
 }
