--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -4,7 +4,21 @@
   width: 100%;
   box-sizing: border-box;
   margin: 0 0 0 0;
-  grid-row: span 3;
+  grid-row: 2/4;
   object-fit: cover;
   object-position: center;
+}
+
+@media screen and (max-width:1024px) {
+  .place__image {
+    max-width: 440px;
+
+  }
+}
+
+@media screen and (max-width:768px) {
+  .place__image {
+    max-width: 340px;
+
+  }
 }
