--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -10,3 +10,17 @@
 .place__paragraph:first-of-type {
   margin-bottom: 26px;
 }
+
+@media screen and (max-width:768px) {
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 26px;
+
+  }
+
+  .place__paragraph:first-of-type {
+    margin-bottom: 25px;
+  }
+
+}
+
