--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,3 +6,20 @@
   line-height: 76px;
   max-width: 460px;
 }
+
+@media screen and (max-width:768px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 46px;
+
+  }
+}
+
+@media screen and (max-width:320px) {
+  .place__title {
+font-size: 32px;
+line-height: 35px;
+margin-bottom: 32px;
+
+  }
+}
