--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,5 +3,12 @@
   max-width: 456px;
   max-height: 46px;
   align-self: end;
-  margin-bottom: 56px;
+  margin-bottom: 48px;
+  grid-column: 2;
+}
+
+@media screen and (max-width:460px) {
+  .place__website {
+    margin-bottom: 32px;
+  }
 }
