--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,10 +3,35 @@
   display: grid;
   grid-template-columns: auto auto;
   grid-auto-flow: column;
-  grid-template-rows: auto auto auto auto;
+  grid-template-rows: auto auto auto;
   column-gap: 40px;
   margin-bottom: 80px;
+}
+
+.place:last-of-type {
+  margin-bottom: 0;
+}
+
+@media screen and (max-width:460px) {
+  .place {
+    display: block;
+    margin-bottom: 50px;
+
+  }
+}
+
+@media screen and (min-width:461px) and (max-width:768px) {
+  .place {
+column-gap: 28px;
+    margin-bottom: 73px;
+
+  }
+}
+
+@media screen and (min-width:769px) and (max-width:1024px) {
+  .place {
+column-gap: 32px;
 
 
-
+  }
 }
