--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,8 @@
 @import url(../vendor/normalize.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-link/links__lang-link.css);
+@import url(../blocks/header/__links/header__links.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
@@ -28,7 +31,7 @@
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__link);
+@import url(../blocks/footer/__links/links.css);
 @import url(../blocks/footer/__link/footer__link.css);
-@import url(../blocks/intro1/intro1.css);
-@import url(../blocks/links/links.css);
-@import url(../blocks/links/__lang-link/links__lang-link.css);
+@import url(../blocks/intro/numbers.css);
