--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,18 +1,18 @@
 .header {
-  border: 1px solid red;
-  max-width: 1184px;
   display: flex;
-  margin: 28px 48px 0 48px;
+  margin: 0 48px;
   justify-content: space-between;
+  padding-top: 28px;
 }
 
 @media screen and (max-width:767px) {
   .header {
-    margin: 28px 16px 0 16px;
+    margin: 0 16px;
   }
 }
+
 @media screen and (min-width:768px) and (max-width:1023px) {
   .header {
-    margin: 28px 24px 0 24px;
+    margin: 0 24px;
   }
 }
