--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,9 @@
 .lead__subtitle {
-  border: 1px solid red;
   align-self: center;
   font-weight: 400;
   font-size: 30px;
   line-height: 1.2;
-  margin: 0;
+  margin: 0 auto;
   max-width: 640px;
   text-align: center;
 }
