--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,26 +1,22 @@
 .lead__title {
-  border: 1px solid red;
   max-width: 720px;
   font-weight: 900;
   font-size: 96px;
   text-align: center;
-  margin: 56px 0 32px 0;
+  margin: 56px auto 32px auto;
   line-height: 100px;
   align-self: center;
-
-
 }
 
 @media screen and (max-width:1024px) {
   .lead__title {
     margin-top: 48px;
   }
-
 }
+
 @media screen and (max-width:768px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
   }
-
 }
