--- a/blocks/cover/__backgroung/cover__backgroung.css
+++ b/blocks/cover/__backgroung/cover__backgroung.css
@@ -1,10 +1,12 @@
 .cover__backgroung {
-  max-width: 1184px;
+  /*max-width: 1184px;
   z-index: 0;
   grid-row: 1/5;
   grid-column: 1/7;
   box-sizing: border-box;
   width: 100%;
   object-fit: cover;
-  object-position: center;
+  object-position: center;*/
+
+  
 }
