--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,13 +1,44 @@
 .cover__link {
   background-image: url(../../../images/cover-trains.jpg);
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 100%;
+  /*display: grid;*/
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: #fff;
   text-decoration: none;
+
+  /*grid-row: 1/5;
+  grid-column: 1/7;*/
+
+  max-width: 1184px;
+  z-index: 0;
+  box-sizing: border-box;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+
+}
+
+.cover__link:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #2A2C2F;
+  opacity: .3;
+  transition: opacity .3s ease;
+}
+
+
+.cover__link:hover::before {
+  background: #2A2C2F;
+  opacity: .8;
+}
+
+.cover__link:hover {
+  opacity: 1;
 }
