--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,4 +1,5 @@
 .cover__title {
+  font-family: 'Inter Black';
   margin: 0;
   font-weight: 900;
   font-size: 72px;
@@ -8,11 +9,13 @@
   grid-row: 2/3;
   grid-column: 2/6;
   z-index: 1;
+  margin-bottom: 32px;
 }
 
-@media screen and (max-width:728px) {
+@media screen and (max-width:767px) {
   .cover__title {
     font-size: 32px;
     line-height: 35px;
+    margin-bottom: 16px;
   }
 }
