--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -11,6 +11,11 @@
   margin-right: 0;
 }
 
+.footer__link:hover {
+  opacity: 80%;
+  transition: 1s;
+}
+
 @media screen and (max-width:320px) {
   .footer__link {
     font-size: 24px;
