--- a/blocks/header/__lang-link/links__lang-link.css
+++ b/blocks/header/__lang-link/links__lang-link.css
@@ -6,9 +6,13 @@
   line-height: 28px;
 }
 
-
 .header__lang-link:first-of-type {
   margin-right: 18px;
+}
+
+.header__lang-link:hover {
+  opacity: 80%;
+  transition: 1s;
 }
 
 @media screen and (max-width:728px) {
