--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,4 +1,5 @@
 .lead__title {
+  font-family: 'Inter Black';
   max-width: 720px;
   font-weight: 900;
   font-size: 96px;
@@ -14,9 +15,11 @@
   }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
+    margin-bottom: 16px;
+
   }
 }
