--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,17 @@
+@font-face {
+  font-family: 'Inter', Arial, sans-serif;
+  src: url('../../fonts/Inter-Regular.ttf') format("truetype"),
+  url('../../fonts/Inter-Black.ttf') format("trutype");
+}
+
 .page {
   background-color: #2A2C2F;
   color: #FFFFFF;
-  
+  font-family: "Inter";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
