--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -27,6 +27,9 @@
 
 @media screen and (min-width:769px) and (max-width:1024px) {
   .place {
+    grid-template-columns: 440px 1fr;
+    grid-auto-flow: column;
+    grid-template-rows: 1fr;
     column-gap: 32px;
   }
 }
