--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,13 +7,13 @@
 
 @media screen and (max-width:767px) {
   .header {
-    margin: 0 16px;
+    margin: 0;
     padding-top: 16px;
   }
 }
 
 @media screen and (min-width:768px) and (max-width:1023px) {
   .header {
-    margin: 0 24px;
+    margin: 0;
   }
 }
