--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,13 +1,7 @@
-@font-face {
-  font-family: 'Inter', Arial, sans-serif;
-  src: url('../../fonts/Inter-Regular.ttf') format("truetype"),
-  url('../../fonts/Inter-Black.ttf') format("trutype");
-}
-
 .page {
   background-color: #2A2C2F;
   color: #FFFFFF;
-  font-family: "Inter";
+  font-family: 'Inter', 'Arial', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
