--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,8 +1,7 @@
 .place {
   display: grid;
   grid-template-columns: auto auto;
-  grid-auto-flow: column;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto;
   column-gap: 40px;
   margin-bottom: 80px;
 }
@@ -28,8 +27,6 @@
 @media screen and (min-width:769px) and (max-width:1024px) {
   .place {
     grid-template-columns: 440px 1fr;
-    grid-auto-flow: column;
-    grid-template-rows: 1fr;
     column-gap: 32px;
   }
 }
