--- a/blocks/content/contents.css
+++ b/blocks/content/contents.css
@@ -1,17 +1,5 @@
 .content {
   display: flex;
   flex-direction: column;
-  margin: 0 48px 0 48px;
+  margin: 0 auto;
  }
-
-@media screen and (max-width:767px) {
-  .content {
-    margin: 0 16px 0 16px;
-  }
-}
-
-@media screen and (min-width:768px) and (max-width:1023px) {
-  .content {
-    margin: 0 24px 0 24px;
-  }
-}
