--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,67 +1,32 @@
 .cover {
-  /*display: grid;
-  grid-template-rows: auto auto auto;
-  grid-template-columns: auto auto auto auto auto auto;
-  row-gap: 32px;
-  margin: 92px auto;*/
   display: flex;
   width: 1184px;
-  height: 740px;
+  min-height: 740px;
   align-self: center;
-  margin: 92px auto;
-
+  margin: 92px 48px;
 }
 
-
-
-@media screen and (min-width:1024px) and (max-width:1184px) {
+@media screen and (max-width:1279px) {
   .cover {
-    /*margin-left: -48px;
-    margin-right: -48px;*/
+    width: 100%;
+    min-height: 640px;
   }
 }
 
 @media screen and (max-width:1023px) {
   .cover {
-    /* margin: 90px -24px 88px -24px;*/
+    width: 100%;
+    min-height: 480px;
+    margin-bottom: 88px;
   }
 }
 
 @media screen and (max-width:767px) {
   .cover {
-    /*margin: 66px -16px 64px -16px;
-    row-gap: 16px;*/
+    width: 100%;
+    min-height: 200px;
+    margin-top: 66px;
+    margin-bottom: 64px;
   }
 }
 
-@media screen and (min-width:1024px) and (max-width:1279px) {
-  .cover {
-    width: calc(100% + 96px);
-    max-height: 640px;
-    margin: 92px -48px;
-  }
-}
-
-@media screen and (min-width:768px) and (max-width:1023px) {
-  .cover {
-    width: calc(100% + 48px);
-    max-height: 480px;
-    margin: 92px -24px 88px -24px;
-  }
-}
-
-@media screen and (min-width:320px) and (max-width:767px) {
-  .cover {
-    width: calc(100% + 32px);
-    max-height: 200px;
-    margin: 66px -16px 64px -16px;
-  }
-}
-
-@media screen and (max-width:319px) {
-  .cover {
-    width: calc(100% + 32px);
-    max-height: 200px;
-    margin: 66px -16px 64px -16px;
-  }
-}
