--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width:320px) {
   .footer__copiryght {
-    font-size: 14px;
     line-height: 14px;
+    align-self: flex-start;
   }
 }
