--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,10 +2,21 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 24px;
+  margin-right: 48px;
+  margin-left: 48px;
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .footer {
+    margin-right: 24px;
+    margin-left: 24px;
+  }
 }
 
 @media screen and (max-width:728px) {
   .footer {
     flex-direction: column;
+    margin-right: 16px;
+    margin-left: 16px;
   }
 }
