--- a/blocks/header/__lang-link/links__lang-link.css
+++ b/blocks/header/__lang-link/links__lang-link.css
@@ -4,10 +4,11 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
+  margin-right: 18px;
 }
 
-.header__lang-link:first-of-type {
-  margin-right: 18px;
+.header__lang-link:last-of-type {
+  margin-right: 0;
 }
 
 .header__lang-link:hover {
