--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,17 +2,18 @@
   display: flex;
   justify-content: space-between;
   padding-top: 28px;
-}
-
-@media screen and (max-width:767px) {
-  .header {
-    margin: 0;
-    padding-top: 16px;
-  }
+  margin: 0 48px;
 }
 
 @media screen and (min-width:768px) and (max-width:1023px) {
   .header {
-    margin: 0;
+    margin: 0 24px;
+  }
+}
+
+@media screen and (max-width:767px) {
+  .header {
+    margin: 0 16px;
+    padding-top: 16px;
   }
 }
