--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,46 +1,27 @@
 .intro {
   align-self: flex-start;
   margin-top: 92px;
-  margin-left: 98px;
+  margin-left: 148px;
 
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width:1279px) {
   .intro {
-    margin-left: 0;
+    margin-left: 48px;
   }
 }
 
-@media screen and (min-width:768px) and (max-width:1023px) {
+@media screen and (max-width:1023px) {
   .intro {
-    margin-left: 0;
+    margin-left: 24px;
     margin-top: 88px;
   }
 }
 
 @media screen and (max-width:767px) {
   .intro {
-    margin-top: 64px;
-  }
-}
-
-
-@media screen and (min-width:1440px) {
-  .intro {
-    margin-left: 180px;
-  }
-}
-
-
-@media screen and (min-width:1920px) {
-  .intro {
-    margin-left: 420px;
-  }
-}
-
-
-@media screen and (min-width:2560px) {
-  .intro {
-    margin-left: 740px;
+    margin-top: 16px;
+    margin-left: 16px;
+    margin-right: 16px;
   }
 }
