--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,3 +7,21 @@
   text-transform: uppercase;
   letter-spacing: 1.5px;
 }
+
+@media screen and (max-width: 1279px) {
+  .lead__caption {
+      margin: 0 0 0 48px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lead__caption {
+      margin: 0 0 0 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__caption {
+      margin: 0 0 0 16px;
+  }
+}
