--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,31 +1,17 @@
 .lead__image {
-  max-width: 984px;
-  margin: 64px auto 8px auto;
-  object-fit: cover;
-  object-position: center;
   width: 100%;
-  box-sizing: border-box;
+  margin: 64px 0 8px;
+  object-fit: cover;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:1279px) {
   .lead__image {
-    margin-left: -24px;
-    margin-right: -24px;
-    width: calc(100% + 48px);
+    margin: 56px 0 8px;
   }
 }
 
 @media screen and (max-width:767px) {
   .lead__image {
-    margin-left: -16px;
-    margin-right: -16px;
-    width: calc(100% + 32px);
-    margin-top: 40px;
-  }
+    margin: 40px 0 8px;
 }
-
-@media screen and (min-width: 768px) and (max-width:1279px) {
-  .lead__image {
-    margin-top: 56px;
-  }
 }
