--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,9 @@
 .lead {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  display: flex;
   flex-direction: column;
-  margin: auto;
-  max-width: 984px;
+  align-items: center;
   width: 100%;
 }
