--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,6 @@
 .page {
-  background-color: #2A2C2F;
+  max-width: 1280px;
+  margin: auto;
   color: #FFFFFF;
   font-family: "Inter", sans-serif;
   -webkit-font-smoothing: antialiased;
