--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,10 +5,17 @@
   margin: 92px auto 92px auto;
 }
 
+@media screen and (max-width:1279px) {
+  .photo-grid {
+    grid-template-columns: repeat(3, 1fr);
+    margin: 92px 48px;
+  }
+}
+
 @media screen and (max-width:1024px) {
   .photo-grid {
-    gap: 16px;
     grid-template-columns: repeat(3, 1fr);
+  
   }
 }
 
@@ -16,8 +23,7 @@
   .photo-grid {
     gap: 14px;
     grid-template-columns: repeat(2, 1fr);
-    margin-top: 88px;
-    margin-bottom: 88px;
+    margin: 88px 16px;
   }
 }
 
