--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,6 +8,8 @@
 
 @media screen and (max-width:768px) {
   .place__title {
+    margin-left: 16px;
+    margin-right: 16px;
     font-size: 42px;
     line-height: 46px;
   }
