--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,21 @@
 .places {
-  margin: auto;
+  margin: 0 148px;
+}
+
+@media screen and (max-width:1279px) {
+  .places {
+    margin: 0 48px;
+  }
+}
+
+@media screen and (max-width:1023px) {
+  .places {
+    margin: 0 24px;
+  }
+}
+
+@media screen and (max-width:460px) {
+  .places {
+    margin: 0;
+  }
 }
