--- a/blocks/website/__url-heading/website__url-heading.css
+++ b/blocks/website/__url-heading/website__url-heading.css
@@ -6,11 +6,5 @@
   max-width: 456px;
   color: #aaaaaa;
   margin-bottom: 12px;
-}
-
-@media screen and (max-width:768px) {
-  .website__url-heading {
-    font-size: 12px;
-    line-height: 12px;
-  }
+  letter-spacing: 2px;
 }
