--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url(../vendor/normalize.css);
+@import url(../blocks/root/root.css);
 @import url(../vendor/fonts/fonts.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -7,6 +8,7 @@
 @import url(../blocks/header/__links/header__links.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__figure/lead__figure.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
@@ -35,7 +37,5 @@
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-@import url(../blocks/footer/__link);
 @import url(../blocks/footer/__links/links.css);
 @import url(../blocks/footer/__link/footer__link.css);
-@import url(../blocks/intro/numbers.css);
