--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -17,6 +17,7 @@
   .cover {
     width: 100%;
     min-height: 480px;
+    margin-top: 90px;
     margin-bottom: 88px;
   }
 }
@@ -29,4 +30,3 @@
     margin-bottom: 64px;
   }
 }
-
