--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -16,16 +16,15 @@
   transition: 1s;
 }
 
-@media screen and (max-width:728px) {
+@media screen and (max-width:767px) {
   .footer__link {
     margin-bottom: 32px;
     margin-right: 0;
-  }
-}
-
-@media screen and (max-width:320px) {
-  .footer__link {
     font-size: 24px;
     line-height: 24px;
+  }
+
+  .footer__link:last-of-type {
+    margin-bottom: 48px;
   }
 }
