--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -14,15 +14,15 @@
   }
 }
 
-@media screen and (min-width:461px) and (max-width:768px) {
+@media screen and (max-width:768px) {
   .place__image {
     max-width: 340px;
+    margin-bottom: 32px;
   }
 }
 
 @media screen and (max-width:460px) {
   .place__image {
-    min-width: calc(100% + 32px);
-    margin-bottom: 32px;
+    max-width: 320px;
   }
 }
