--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,4 +1,4 @@
-.website__link {
+.place__link {
   margin: 0;
   font-weight: 400;
   font-size: 18px;
@@ -7,7 +7,7 @@
   color: #fff;
 }
 
-.website__link:hover {
+.place__link:hover {
   opacity: 80%;
   transition: 1s;
 }
