--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,5 @@
 .place__paragraph {
-  margin: 0 0 0 0;
+  margin: 0;
   max-width: 484px;
   font-weight: 400;
   font-size: 18px;
@@ -11,13 +11,10 @@
   margin-bottom: 0;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:1023px) {
   .place__paragraph {
     font-size: 16px;
     line-height: 26px;
-  }
-
-  .place__paragraph:first-of-type {
     margin-bottom: 25px;
   }
 }
