--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,17 +6,20 @@
   max-width: 460px;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:1023px) {
   .place__title {
-    margin-left: 16px;
-    margin-right: 16px;
     font-size: 42px;
     line-height: 46px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:767px) {
   .place__title {
+    margin-left: 16px;
+    margin-right: 16px;
+
     font-size: 32px;
     line-height: 35px;
     margin-bottom: 32px;
