--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,12 +1,18 @@
-.website {
+.place__website {
   max-width: 456px;
   align-self: end;
   margin-bottom: 48px;
   grid-column: 2;
 }
 
+@media screen and (max-width:767px) {
+  .place__website {
+    align-self: center;
+  }
+}
+
 @media screen and (max-width:460px) {
-  .website {
+  .place__website {
     margin-bottom: 32px;
     margin-left: 16px;
     margin-right: 16px;
