--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -10,27 +10,33 @@
   margin-bottom: 0;
 }
 
-@media screen and (min-width:769px) and (max-width:1024px) {
+@media screen and (max-width:1279px) {
   .place {
     grid-template-columns: 440px 1fr;
     column-gap: 32px;
   }
 }
 
-@media screen and (min-width:461px) and (max-width:768px) {
+@media screen and (max-width:1023px) {
   .place {
-    grid-template-columns: 320px 1fr;
+    grid-template-columns: 340px 1fr;
     column-gap: 28px;
-    margin-bottom: 73px;
+    margin-bottom: 72px;
   }
 }
 
-@media screen and (max-width:460px) {
+@media screen and (max-width:767px) {
+  .place {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width:380px) {
   .place {
     display: block;
     margin-bottom: 50px;
   }
 }
-
-
-
