--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -14,7 +14,15 @@
   }
 }
 
-@media screen and (max-width:460px) {
+@media screen and (max-width:767px) {
+  .places {
+    display: flex;
+    align-self: center;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width:320px) {
   .places {
     margin: 0;
   }
