--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,18 +3,13 @@
   gap: 16px;
   grid-template-columns: repeat(4, 1fr);
   margin: 92px auto 92px auto;
+  justify-items: center;
 }
 
 @media screen and (max-width:1279px) {
   .photo-grid {
     grid-template-columns: repeat(3, 1fr);
     margin: 92px 48px;
-  }
-}
-
-@media screen and (max-width:1024px) {
-  .photo-grid {
-    grid-template-columns: repeat(3, 1fr);
   }
 }
 
