--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
   display: flex;
-  width: 100%;
+  width: calc(100% - 96px);
   min-height: 740px;
   align-self: center;
   margin: 92px 48px;
@@ -8,6 +8,7 @@
 
 @media screen and (max-width:1279px) {
   .cover {
+    width: 100%;
     min-height: 640px;
   }
 }
