--- a/pages/index.css
+++ b/pages/index.css
@@ -13,7 +13,7 @@
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__title/lead__title.css);
-@import url(../blocks/content/contents.css);
+@import url(../blocks/content/content.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__subtitle/intro__list.css);
 @import url(../blocks/intro/__text/intro__text.css);
